<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Untapped Rally</string>

    <!-- _-_- GENERIC -_-_ -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon">icon</string>
    <string name="go">Go</string>

    <string name="just_a_moment">Just a Moment…</string>

    <!-- Actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_website">Website</string>
    <string name="action_add_to_cal">Add To Calendar</string>
    <string name="event_website">Event Website</string>


    <!-- Error -->
    <string name="no_apps_available">No apps support this action</string>
    <string name="oops">Oops!</string>
    <string name="no_network_connection_msg">You don\'t seem to have an Internet connection at the moment. We\'ll go ahead and load old data, if it exists</string>
    <string name="generic_empty_list_text">No Data Found. \nPlease try again later.</string>
    <string name="invalid_url">Oops, that does not seem to be a valid link</string>
    <string name="no_calendar">No calendar found.</string>
    <string name="calendar_error">This event cannot be added to the calendar</string>

    <!-- This array is used to populate the Nav Drawer-->
    <string-array name="nav_bar_modules">
        <item>Home</item>
        <item>Events</item>
        <item>News</item>
        <item>Results</item>
        <item>Tweets</item>
        <item>Spectating</item>
        <item>Worker Info</item>
    </string-array>

    <!-- This array is used by the Fragments to set the Title-->
    <string-array name="action_bar_modules">
        <item>Home</item>
        <item>Events</item>
        <item>News</item>
        <item>Results</item>
        <item>Tweets</item>
        <item>Spectating</item>
        <item>Worker Info</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Selector Strings -->
    <string name="selector_next">Next</string>
    <string name="selector_prev">Previous</string>


    <!-- _-_-_- HOME -_-_-_ -->
    <string name="latest_news">Latest News</string>
    <string name="next_event">Next Rally</string>


    <!-- _-_-_- STANDINGS -_-_-_ -->
    <string-array name="championships_array">
        <item>Driver - Overall</item>
        <item>Driver - Super Production</item>
        <item>Driver - 2-Wheel Drive</item>
        <item>Driver - B-Spec</item>
        <item>Co-Driver - Overall</item>
        <item>Co-Driver - Super Production</item>
        <item>Co-Driver - 2-Wheel Drive</item>
        <item>Co-Driver - B-Spec</item>
    </string-array>

    <!-- _-_-_- NEWS -_-_-_ -->
    <string name="news_read">Read</string>
    <string name="news_unread">Unread</string>
    <string name="news_mark_unread">Mark Unread?</string>
    <string name="pub_date">Published: </string>

    <string name="news_no_new">Nothing to see here.\nThere doesn\'t appear to be any recent news items\n\nPerhaps try adjusting the number of days to keep news items under Settings</string>


    <!-- _-_-_- ABOUT -_-_-_ -->
    <string name="about_main">This app is developed and published by UntappedKegg.\n\nI am a professional software developer and rally fan.
        I develop and maintain this app in my free time, for my personal use and in the hopes that others may find it useful as well. If you have any comments or
        suggestions, please feel free to drop me a line using the \'Send Feedback\' option in the 3-dot menu above\n</string>
    <string name="about_disclaimer"><u><b>Disclaimer</b></u>:
        \nThis app is <u><b>not</b></u> affiliated with, maintained, authorized, endorsed, or sponsored by Rally America, Inc. in any way either expressed or implied.</string>

    <string name="about">About</string>
    <string name="about_learn_more"> To learn more about the series, go to:\n http://www.rally-america.com</string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_changelog">View Changelog</string>
    <string name="changelog">Change Log</string>
    <string name="about_follow">Follow Me</string>

    <!-- FeedBack -->
    <string name="feedback">Send Feedback</string>
    <string name="fb_preamble">App Version: %1$s \nAndroid SDK: %2$s \nAndroid Version: %3$s \nDevice: %4$s: %5$s  \nPlease leave the above lines for debugging purposes. Thank you!\n\n</string>

    <!-- _-_-_- EVENTS -_-_-_ -->
    <string name="events_round">Round: </string>
    <string name="events_series">Series: </string>
    <string name="events_flag">Icon</string>
    <string name="events_start">Start Date:</string>
    <string name="events_end">End Date:</string>
    <string name="events_date">Date:</string>
    <string name="events_location">Location:</string>
    <string name="events_stages">Stages</string>
    <string name="events_photos">Photos</string>
    <string name="events_results">Results</string>

    <string name="empty_photos">Oops, there doesn\'t appear to be any photos right now.</string>

    <!-- stages_row -->
    <string name="event_stages_atc">First Car:</string>

    <!-- Schedule -->
    <string name="upcoming">Upcoming</string>
    <string name="live">LIVE!</string>
    <string name="now_live">NOW LIVE!</string>
    <string name="complete">Complete</string>
    <string name="cancelled">CANCELLED</string>

    <string name="stages_unavailable">This event does not currently have any stage information.\n\nPlease check back closer to the event.</string>
    <string name="stages_contacting">Retrieving Stage Information\nJust a Moment&#8230;</string>

    <string name="stage_results_format">&lt;!DOCTYPE html&gt;\n&lt;html lang="en"&gt;\n&lt;head&gt;\n&lt;meta name="viewport" content="initial-scale=1.0"&gt;\n&lt;meta charset="utf-8"&gt;\n&lt;/head&gt;\n&lt;body text="#ffffff" text-align:center;"&gt;&lt;h3&gt;%s&lt;/h3&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="stage_results_loading">&lt;h3&gt;Fetching Results.&lt;/h3&gt;\n\nJust a Moment...</string>
    <string name="stage_results_error">No Results Found</string>
    <string name="stage_results_select">Select a stage to view results</string>

    <!-- STAGE TIMES/RESULTS -->
    <string name="stages_times">Times</string>
    <string name="stages_results">Results</string>

    <!-- _-_-_- PREFERENCES -_-_-_ -->

    <string name="settings">Settings</string>
    <!-- Headers -->
    <string name="pref_header_schedule">Schedule</string>
    <string name="pref_header_news">News</string>
    <string name="pref_header_notifications">Notifications</string>

    <!-- Schedule -->
    <string name="settings_show_regional_events">Show Regional Events</string>
    <string name="settings_use_experimental_sched">Use Expandable Schedule</string>

    <!-- News -->
    <string name="pref_news_title">Days to Keep News Items</string>
    <string name="pref_news_dialog_title">Keep For</string>
    <string-array name="pref_news_entries">
        <item>15 days</item>
        <item>30 days</item>
        <item>45 days</item>
        <item>60 days</item>
        <item>90 days</item>
    </string-array>

    <string name="pref_news_default">30</string>
    <string-array name="pref_news_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </string-array>

    <string name="pref_event_news">Event Specific News</string>
    <string name="pref_event_news_summary">Select the events you would like to see news for</string>
    <string name="pref_event_feed_dialog">Select Events</string>
    <string-array name="pref_event_news_entries">
        <item>100 Acre Wood</item>
        <item>Lake Superior</item>
        <item>Mt. Washington Hill Climb</item>
        <item>New England Forest</item>
        <item>Ojibwe Forest</item>
        <item>Oregon Trail</item>
        <item>Show-Me Rally</item>
        <item>Susquehannock Trail</item>
    </string-array>

    <string-array name="pref_event_news_values">
        <item>100aw</item>
        <item>lspr</item>
        <item>mtwa</item>
        <item>nefr</item>
        <item>ofpr</item>
        <item>oregon</item>
        <item>smr</item>
        <item>stpr</item>
    </string-array>

    <!-- Notifications -->
    <string name="settings_show_notifications">Event Notifications</string>

    <string name="setting_stage_notifications">Stage Start Notifications</string>
    <string name="setting_stage_notifs_summary">Notify me at the scheduled start of each stage</string>

    <string name="pref_title_sound">Play Sound</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="settings_notify_button">Test Notification</string>

    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_default_ringtone">System Default</string>


    <!-- _-_-_- WIDGETS -_-_-_ -->
    <string name="widget_next_event">Rally - Next Event</string>

    <string name="event_live_notification_title_template">Live: %1$s</string>
    <string name="event_live_notification_send_text">%1$s is now live!</string>
    <string name="event_live_notification_share_chooser_text">Share this event</string>

    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>


    <string name="no_tweets">No Tweets</string>
    <string name="loading_tweets">Loading Tweets...</string>

    <string name="stage_start_notification_title">Scheduled start: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="stage_start_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="youtube">YouTube</string>
    <string name="gplus">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="about_privacy">Privacy Policy</string>

</resources>
