<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

 <!--   <SwitchPreference android:key="settings_show_notifications"
        android:title="@string/settings_show_notifications"
        android:defaultValue="true"
        />-->
    <CheckBoxPreference android:key="@string/settings_show_regional_events"
        android:title="@string/settings_show_regional_events"
        android:defaultValue="true"
        />

    <CheckBoxPreference android:key="@string/settings_use_experimental_sched"
        android:title="@string/settings_use_experimental_sched"
        android:summary="@string/settings_use_experimental_sched_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="pref_news_cutoff"
        android:title="@string/pref_news_title"
        android:dialogTitle="@string/pref_news_dialog_title"
        android:entries="@array/pref_news_entries"
        android:entryValues="@array/pref_news_values"
        android:defaultValue="@string/pref_news_default" />

</PreferenceScreen>
